--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
+    "@stripe/stripe-js": "^7.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.22.3",
     "axios": "^1.7.8",
+    "dayjs": "^1.11.13",
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,6 +18,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
