--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "express": "^4.21.1",
     "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.3"
+    "mongoose": "^8.8.3",
+    "stripe": "^18.3.0"
   },
   "name": "server",
   "version": "1.0.0",
